2002-08-12  Aruna P R <aruna.pou@wipro.com>
	
	* src/preferences.c : preference dialog is connected to "delete-event" 
	which hides the dialog when "Esc" is used for closing the dialog. 
	Fix for #90298

2002-07-25  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_listener): allow opening dialogs
	even if win->gh == NULL.

2002-07-25  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex.h: added prototype for set_prefs();
	* src/ui.c (prefs_cb): set current values.
	* src/preferences.c: set OK and apply buttons to insensitive.

2002-07-22  Jaka Mocnik  <jaka@gnu.org>

	* src/session.c: add a "geometry" option.
	* src/main.c (main): parse geometry if specified.

2002-07-20  Jaka Mocnik  <jaka@gnu.org>

	* src/Makefile.am (INCLUDES): fixed locale paths.
	* src/hex-document.c (hex_document_export_html): show a progress
	indicator during exporting.
	* src/preferences.c (create_prefs_dialog): slightly fixed layout.
	* src/ghex-window.c, src/ghex-ui.xml, src/ui.c: reorganized ui.
	Files menu has been renamed to Windows and Character table and
	Converter items have also been moved to Windows menu.
	* src/findreplace.c: display a dialog when a string is not found.
	* src/ui.c (display_info_dialog): format a message and display it in
	an info dialog.

2002-07-18  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/print.c (ghex_print_job_info_new): We dont have to create a new
	GnomePrintMaster here. Its anyway created from the Print Context in
	ui.c (ghex_print).
	* src/print.c (ghex_print_job_execute): Dont close the Print Context.
	Closing the Print Master anyway does that.
	* src/ui.c : Close the Print Master (gnome_print_master_close) before
	preview or print. Fix for bug #85147

2002-07-17  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ui.c (close_cb): Remove the document from the Files list on close.
	* src/ghex-window.c (ghex_document_close): Remove the document from the
	Files list if the next view is NULL. Also not doing an unref on the 