@@ -1,8 +1,9 @@
 [Desktop Entry]
-_Name=GHex
-_Comment=Gnome Hexadecimal Editor
+Encoding=UTF-8
+_Name=Hex Editor
+_Comment=GNOME Hexadecimal Editor
 Exec=ghex2
-Terminal=0
+Terminal=false
 Type=Application
 Icon=gnome-ghex.png
-Categories=Application;Utility;GhexEditor
+Categories=GNOME;Application;Utility;
