@@ -1,3 +1,8 @@
+2002-08-19  Ross Burton  <ross@burtonini.com>
+
+	* ghex.desktop.in: Fix the desktop file so that it validates and
+	is sane.
+
 2002-08-12  Aruna P R <aruna.pou@wipro.com>
 	
 	* src/preferences.c : preference dialog is connected to "delete-event" 
